[gd_scene load_steps=3 format=3 uid="uid://dwtxwdfbl26al"]

[ext_resource type="Script" path="res://scenes/games/cannon/cannon_admin_panel.gd" id="1_o3sna"]
[ext_resource type="PackedScene" uid="uid://cw5h2g1vjx36k" path="res://scenes/ui/collapsable_container/collapsable_container.tscn" id="2_cv0q1"]

[node name="CannonAdminPanel" type="MarginContainer"]
offset_right = 320.0
offset_bottom = 400.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_o3sna")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LeaderboardContainer" parent="VBoxContainer" instance=ExtResource("2_cv0q1")]
layout_mode = 2
title = "Leaderboard"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/LeaderboardContainer"]
layout_mode = 2

[node name="ToggleAutostart" type="CheckButton" parent="VBoxContainer/LeaderboardContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Autostart"

[node name="ButtonResetLeaderboard" type="Button" parent="VBoxContainer/LeaderboardContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"

[connection signal="toggled" from="VBoxContainer/LeaderboardContainer/VBoxContainer/ToggleAutostart" to="." method="_on_toggle_autostart_toggled"]
[connection signal="pressed" from="VBoxContainer/LeaderboardContainer/VBoxContainer/ButtonResetLeaderboard" to="." method="_on_button_reset_leaderboard_pressed"]
